--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
             min-height: 200px;
         }
     </style>
-    <title>BASC: BAtch Site Clone extension</title>
+    <title>BACS: [BA]tch [C]lone [S]ite extension</title>
 </head>
 
 <body>
